@@ -1,108 +1,0 @@
-Sat Dec 15 16:45:20 2001  Marco S Hyman  <marc@snafu.org>
-
-	* Makefile.inc: bump version to 1.7
-
-	* GNUmakefile.inc: bump version to 1.7
-
-	* lib/gpsprint.c: Include string.h for memxxx prototypes.
-
-	* All files with a copyright statement: the program has
-	explicitly been placed in the public domain.
-
-Mon Jun 25 12:35:42 2001  Marco S Hyman  <marc@snafu.org>
-
-	* lib/gps1.c: Define Linux and BSD as SIO_TYPE values
-
-	* NEWS: Note changes.
-
-	* GNUmakefile.inc: remove -O3.  Update version to 1.6.
-
-	* Makefile.inc: remove -O3.  Update version to 1.6. Add options
-	to CFLAGS instead of COPTS (needed by FreeBSD?).
-
-Mon Jun 18 21:18:19 2001  Marco S Hyman  <marc@snafu.org>
-
-	MAJORITY OF CHANGES FROM Grisha Pupkov <pupkov@mccme.ru>
-	
-	* NEWS: New file describing changes.
-
-	* fixtrack.pl: removed
-
-	* fixtrack: updated version of fixtrack.
-
-	* GNUmakefile.inc: SIO_TYPE now specified as BSD or Linux, not
-	0 or 1.  GPS flag no longer needed (GPS type selection is now
-	handled at run time).   Version bumped.  -O3 opt.
-
-	* Makefile.inc: IO_TYPE now specified as BSD or Linux, not
-	0 or 1.  GPS flag no longer needed (GPS type selection is now
-	handled at run time).   Version bumped.  -O3 opt.
-
-	* README: Comments regarding the need to select GPS type
-	removed.
-
-	* gardump/gardump.1: describe the -u option.  Standardize
-	option ordering.
-
-	* gardump/gardump.c: add -u processing.
-
-	* garload/garload.c: usage string now matches man page.
-
-	* lib/gps1.c: SIO_TYPE flag changes.  Waypoint type added
-	to gpsState structure.  Waypoint type access and modification
-	functions added.
-
-	* lib/gps1.h: declare gpsSetWptType and gpsGetWptType.
-
-	* lib/gpscap.c: decode the waypoint data format from the
-	protocol capability packet so we can figure out what type
-	of garmin unit we're talking too.
-
-	* lib/gpsdisplay.c: Change the format of the debug output from
-	hex/ascii to decimal/ascii.   [Marc says: I don't like this change
-	but I'm not the one using the debug code these days :-]
-
-	* lib/gpsdump.c: handle utcData.
-
-	* lib/gpsformat.c: Handle the various waypoint formats dynamically
-	at run time.
-
-	* lib/gpsprint.c: Describe the waypoint type formats.  printWaypoint
-	is now given the waypoint type and prints the data accordingly.
-	(printTime): prints the GPS time in UTC format.
-
-	* lib/gpsproto.h: define UTC command and waypoint packet types.
-
-Tue Jun 12 10:24:49 2001  Marco S Hyman  <marc@snafu.org>
-
-	* lib/gpsload.c (startLoad): shift to get the high order byte,
-	bug fix from Max Ushakov via Grigory Pupkov <pupkov@mccme.ru>.
-	(endLoad): ditto
-	
-Tue May  1 17:17:08 2001  Marco S Hyman  <marc@snafu.org>
-
-	* GNUmakefile, GNUmakefile.inc, lib/GNUmakefile,
-	gardump/GNUmakefile, and garload/GNUmakefile: GNU makefiles
-	for Linux users, from sla@zav.mccme.ru
-
-	* lib/GarminIOSpec.pdf: I/O specification moved to lib directory.
-
-	* Makefile.inc (SERIAL_PORT): now defaults to /dev/gps
-	(SIO_TYPE): Defaults to BSD (Linux in GNUmakefile.inc).
-	(GPS): Defaults to III/III+ style
-	(COPTS): add SIO_TYPE and GPS variables.
-
-	* README: add notes about changes and Linux build instructions.
-
-	* fixtrack.pl: perl script to convert timestamps in existing
-	track logs to the new format.
-
-	* gps1.c: Add linux support; <sla@zav.mccme.ru>
-	Save starting terminal modes and restore when closing unit.
-
-	* gpsformat.c: Add 12/12XL/48 support, change timestamp format
-	to include 4 digit year; <pupkov@mccme.ru>.
-
-	* gpsprint.c: 12/12XL/48 support; <pupkov@mccme.ru>.  Change
-	lat/long disply to only use 6 decimals as that is as much
-	precesion available.
