@@ -1,3 +1,8 @@
+List of changes/additions (for 1.8)
+
+- code to recognize eTrex waypoint and track headers from
+  jason@thought.net (Jason L. Wright)
+
 List of changes/additions (for 1.7)
 
 - now in the public domain
